Enhance sphere jumping physics and improve LongTile collision logic